--- a/ws/css/style.css
+++ b/ws/css/style.css
@@ -31,6 +31,10 @@ a {
 	color: black;
 	text-decoration: none;
 }
+
+TD {
+    border-bottom: 1px solid black; /* Линия снизу */
+}
 /* Стили шапки */
 
 header {
