--- a/ws/css/style.css
+++ b/ws/css/style.css
@@ -10,6 +10,8 @@ html {
 	margin: 0;
 	padding: 0;
 	outline: none;
+	user-select: none;
+	text-decoration: none;
 }
 
 body {
@@ -32,9 +34,31 @@ a {
 	text-decoration: none;
 }
 
-TD {
-    border-bottom: 1px solid black; /* Линия снизу */
+button{
+	background-color: black;
+	border: 2px solid white;
+	color: white;
+	padding: 4px;
 }
+
+button:hover{
+	background-color: silver;
+}
+
+select {
+	background-color: black;
+	border: 2px solid white;
+	color: white;
+	padding: 4px;
+}
+
+input {
+	background-color: black;
+	border: 2px solid white;
+	color: white;
+	padding: 4px;
+}
+
 /* Стили шапки */
 
 header {
@@ -53,13 +77,13 @@ header #logo {
 }
 
 header #menu {
-	width: 50%;
+	width: 45%;
 	padding: 1%;
 	float: left;
 }
 
 header #RegAuto {
-	width: 25%;
+	width: 30%;
 	padding: 1%;
 	float: left;
 }
@@ -67,6 +91,18 @@ header #RegAuto {
 header #Relog {
 	width: 25%;
 	padding: 1%;
+	float: left;
+}
+
+header #menu #no_session {
+	float: left;
+}
+
+header #menu #passenger {
+	float: left;
+}
+
+header #menu #driver {
 	float: left;
 }
 
